# se-toolkit-lab-7

./: .dockerignore  docker-compose.yml
backend/: Dockerfile
backend/app/: etl.py
bot/: .env.bot.example  Dockerfile  PLAN.md  README.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  base.py
bot/handlers/commands/: base.py
bot/services/: __init__.py  llm_api.py  lms_api.py
