[project]
name = "se-toolkit-lab-7-bot"
version = "0.1.0"
description = "Telegram bot for Learning Management System analytics"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
